syntax = "proto2";
import "PTP.Common.proto";
package PTP.Msg;
option java_package = "com.ptp.im.protobuf";

option optimize_for = LITE_RUNTIME;


message MsgReq{
	required string group_adr = 1;
	required uint32 sent_at = 3;
	required Common.MsgType msg_type = 6;
	optional string msg_data = 7;

	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgRes{
	optional uint32 group_id = 1;
	optional uint32 msg_id = 3;
	optional uint32 sent_at = 4;
	optional Common.ERR error = 7;

	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgNotify{
	required Common.MsgInfo msg_info = 1;
	repeated uint32 notify_users = 2;
	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgUnNotify{
	repeated uint32 un_notify_users = 1;
	required uint32 sent_at = 2;
	required uint32 group_id = 3;
	required uint32 from_uid = 4;
}

message MsgReadAckReq{
	required uint32 group_id = 1;
	required uint32 msg_id = 3;

	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgReadNotify{
	required uint32 group_id = 1;
	required uint32 from_uid = 2;
	repeated uint32 notify_users = 3;
	required uint32 msg_id = 4;
	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgGetMaxIdReq{
	required uint32 group_id = 1;

	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgGetMaxIdRes{
	required uint32 group_id = 1;
	required uint32 msg_id = 2;
	optional Common.ERR error = 3;
	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgGetByIdsReq{
	required uint32 group_id = 1;
	repeated uint32 msg_ids = 2;

	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}

message MsgGetByIdsRes{
	optional uint32 group_id = 1;
	repeated Common.MsgInfo msg_list = 2;
	optional Common.ERR error = 3;
	optional bytes attach_data = 20;
	optional uint32 auth_uid = 21;
}
